[gd_scene load_steps=120 format=2]

[ext_resource path="res://content/monster/worm/Worm.gd" type="Script" id=1]
[ext_resource path="res://content/monster/worm/sheet.png" type="Texture" id=2]
[ext_resource path="res://content/sounds/monster/worm/Worm_Spit.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/worm/Worm_Burrow.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/worm/Worm_Emerge.wav" type="AudioStream" id=5]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/sounds/monster/worm/Worm_Die.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/monster/worm/spit.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=14]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 312, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 416, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 520, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 624, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 728, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 832, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 936, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 1040, 0, 104, 79 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 0, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 104, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 208, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 312, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 416, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 520, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 624, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 728, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 832, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 936, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 1040, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 1144, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 1248, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 1352, 474, 104, 79 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 2 )
region = Rect2( 0, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 2 )
region = Rect2( 104, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 2 )
region = Rect2( 208, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 2 )
region = Rect2( 312, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 2 )
region = Rect2( 416, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 2 )
region = Rect2( 520, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 2 )
region = Rect2( 624, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 2 )
region = Rect2( 728, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 2 )
region = Rect2( 832, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 2 )
region = Rect2( 936, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 2 )
region = Rect2( 1040, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 2 )
region = Rect2( 1144, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 2 )
region = Rect2( 1248, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 2 )
region = Rect2( 1352, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 2 )
region = Rect2( 1456, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 1560, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 2 )
region = Rect2( 1664, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 2 )
region = Rect2( 1768, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 2 )
region = Rect2( 1872, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 2 )
region = Rect2( 1976, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 2 )
region = Rect2( 2080, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 2 )
region = Rect2( 2184, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 2 )
region = Rect2( 2288, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 2 )
region = Rect2( 2392, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 2 )
region = Rect2( 2496, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 2 )
region = Rect2( 2600, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 2 )
region = Rect2( 2704, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 2 )
region = Rect2( 2808, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 2 )
region = Rect2( 2912, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 2 )
region = Rect2( 3016, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 2 )
region = Rect2( 3120, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 2 )
region = Rect2( 3224, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 2 )
region = Rect2( 3328, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 2 )
region = Rect2( 3432, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=188]
atlas = ExtResource( 2 )
region = Rect2( 3536, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 2 )
region = Rect2( 3640, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 2 )
region = Rect2( 3744, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 2 )
region = Rect2( 3848, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 2 )
region = Rect2( 3952, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 2 )
region = Rect2( 4056, 395, 104, 79 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 2 )
region = Rect2( 0, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 2 )
region = Rect2( 104, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 2 )
region = Rect2( 208, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 2 )
region = Rect2( 312, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 2 )
region = Rect2( 416, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 2 )
region = Rect2( 520, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 2 )
region = Rect2( 624, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 2 )
region = Rect2( 728, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 2 )
region = Rect2( 832, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 2 )
region = Rect2( 936, 79, 104, 79 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 2 )
region = Rect2( 0, 316, 104, 79 )

[sub_resource type="AtlasTexture" id=205]
atlas = ExtResource( 2 )
region = Rect2( 104, 316, 104, 79 )

[sub_resource type="AtlasTexture" id=206]
atlas = ExtResource( 2 )
region = Rect2( 0, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=207]
atlas = ExtResource( 2 )
region = Rect2( 104, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=208]
atlas = ExtResource( 2 )
region = Rect2( 208, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=209]
atlas = ExtResource( 2 )
region = Rect2( 312, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=210]
atlas = ExtResource( 2 )
region = Rect2( 416, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=211]
atlas = ExtResource( 2 )
region = Rect2( 520, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=212]
atlas = ExtResource( 2 )
region = Rect2( 624, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=213]
atlas = ExtResource( 2 )
region = Rect2( 728, 158, 104, 79 )

[sub_resource type="AtlasTexture" id=214]
atlas = ExtResource( 2 )
region = Rect2( 0, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=215]
atlas = ExtResource( 2 )
region = Rect2( 104, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=216]
atlas = ExtResource( 2 )
region = Rect2( 208, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=217]
atlas = ExtResource( 2 )
region = Rect2( 312, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=218]
atlas = ExtResource( 2 )
region = Rect2( 416, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=219]
atlas = ExtResource( 2 )
region = Rect2( 520, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=220]
atlas = ExtResource( 2 )
region = Rect2( 624, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=221]
atlas = ExtResource( 2 )
region = Rect2( 728, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=222]
atlas = ExtResource( 2 )
region = Rect2( 832, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=223]
atlas = ExtResource( 2 )
region = Rect2( 936, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=224]
atlas = ExtResource( 2 )
region = Rect2( 1040, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=225]
atlas = ExtResource( 2 )
region = Rect2( 1144, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=226]
atlas = ExtResource( 2 )
region = Rect2( 1248, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=227]
atlas = ExtResource( 2 )
region = Rect2( 1352, 237, 104, 79 )

[sub_resource type="AtlasTexture" id=228]
atlas = ExtResource( 2 )
region = Rect2( 1456, 237, 104, 79 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ) ],
"loop": false,
"name": "appear",
"speed": 10.0
}, {
"frames": [ SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ) ],
"loop": false,
"name": "burrow",
"speed": 10.0
}, {
"frames": [ SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ), SubResource( 185 ), SubResource( 186 ), SubResource( 187 ), SubResource( 188 ), SubResource( 189 ), SubResource( 190 ), SubResource( 191 ), SubResource( 192 ), SubResource( 193 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ) ],
"loop": false,
"name": "emerge",
"speed": 10.0
}, {
"frames": [ SubResource( 204 ), SubResource( 205 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 206 ), SubResource( 207 ), SubResource( 208 ), SubResource( 209 ), SubResource( 210 ), SubResource( 211 ), SubResource( 212 ), SubResource( 213 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 214 ), SubResource( 215 ), SubResource( 216 ), SubResource( 217 ), SubResource( 218 ), SubResource( 219 ), SubResource( 220 ), SubResource( 221 ), SubResource( 222 ), SubResource( 223 ), SubResource( 224 ), SubResource( 225 ), SubResource( 226 ), SubResource( 227 ), SubResource( 228 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 5.0
height = 48.0

[sub_resource type="RectangleShape2D" id=123]
extents = Vector2( 13, 5.5 )

[sub_resource type="RectangleShape2D" id=124]
extents = Vector2( 11, 5.5 )

[node name="Worm" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 1 )
techId = "worm"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( 14, -30 )
frames = SubResource( 1 )
animation = "idle"

[node name="HitboxDefault1" type="CollisionShape2D" parent="."]
position = Vector2( 14, -29 )
rotation = 1.5708
shape = SubResource( 34 )
disabled = true

[node name="HitboxDefault2" type="CollisionShape2D" parent="."]
position = Vector2( -4, -12 )
rotation = 1.5708
shape = SubResource( 123 )
disabled = true

[node name="HitboxBurrowowowow" type="CollisionShape2D" parent="."]
position = Vector2( -5, -12 )
rotation = 1.5708
shape = SubResource( 124 )
disabled = true

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( -6, -22 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="RockSpawnPosition" type="Position2D" parent="."]
position = Vector2( 43, -51 )

[node name="DieSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 7 )
pitch_scale = 0.88
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="SpitSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 3 )
pitch_scale = 1.48
bus = "World"

[node name="SpitSound2" parent="SpitSound" instance=ExtResource( 6 )]
stream = ExtResource( 8 )
volume_db = -0.437
pitch_scale = 0.79
bus = "World"

[node name="EmergeSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 5 )
pitch_scale = 1.26
bus = "World"

[node name="StunSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 9 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ) ]

[node name="BurrowSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 4 )
pitch_scale = 1.25
bus = "World"

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
